# nc_time_estimate

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: NC-Code 加工時間數位雙生模組規劃.docx  使用者手冊.md  參數設定說明.md  專案介紹報告.md  第一階段實作演算法.md  第一階段開發規劃.md  第二階段實作演算法.md  第二階段開發規劃.md  系統架構.md  開發規劃及架構.md
examples/: O0001.NC  ToolPathSource.nc  ToolPathSource.opti.nc  basic.nc  integrated.nc
output/: Report_O0001_20260428_0957.xlsx  Report_O0001_20260428_1213.xlsx  Report_ToolPathSource.opti_20260428_0957.xlsx  Report_ToolPathSource_20260428_1137.xlsx  ToolPathSource.opti_20260428_1508.xlsx  ToolPathSource.opti_20260428_1509.xlsx  ToolPathSource_20260428_1137.xlsx  ToolPathSource_20260428_1222.csv  ToolPathSource_20260428_1506.xlsx  normalized.nc  normalized_20260428_1226.csv
output/0427/: Report_ToolPathSource.opti_20260427_2312.xlsx  Report_ToolPathSource.opti_20260427_2348.xlsx  Report_ToolPathSource.opti_20260428_0044.xlsx  Report_ToolPathSource_20260427_2313.xlsx  Report_ToolPathSource_20260427_2350.xlsx
output/v1/: Report_ToolPathSource_v1_20260428_0957.xlsx
profiles/: default_3axis.yaml  default_phase2_3axis.yaml
src/nc_time_twin/: __init__.py  __main__.py  api.py  cli.py
src/nc_time_twin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nc_time_twin/core/: __init__.py  feed_normalizer.py  feed_sanity.py
src/nc_time_twin/core/geometry/: __init__.py  arc.py  line.py  processor.py
src/nc_time_twin/core/ir/: blocks.py  program.py
src/nc_time_twin/core/machine/: __init__.py  benchmark_generator.py  calibration.py  profile.py
src/nc_time_twin/core/parser/: __init__.py  macro.py  modal_state.py  (+3 more)
src/nc_time_twin/gui/: main_window.py
src/nc_time_twin/web/: __init__.py  server.py
tests/: conftest.py  test_cycles_reports_cli.py  test_geometry_time.py  test_gui_source_contract.py  test_parser.py  test_phase2.py  test_web.py
(+16 files in other folders)
