[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nc-time-twin"
version = "0.1.0"
description = "NC-Code machining time estimator with IR, geometry, reports, CLI, GUI, and opt-in Phase 2 motion simulation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
nc-time-twin = "nc_time_twin.cli:main"
nc-time-twin-gui = "nc_time_twin.gui.main_window:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
